--- a/src/pages/MainPage/MainPage.scss
+++ b/src/pages/MainPage/MainPage.scss
@@ -14,6 +14,7 @@
     flex-direction: column;
     align-items: center;
     height: 100%;
+    margin: 0 auto;
   }
 
   &-Card {
@@ -53,20 +54,119 @@
     line-height: 22px;
     text-align: left;
     color: #404040;
+    letter-spacing: 0.3px;
+
+    &2020 {
+      display: none;
+    }
   }
 }
 
+img#second {
+  height: 284px;
+}
 
-#second {
+figcaption#second {
   background-color: #7553FF;
   top: 0;
   border-radius: 16px 0 16px 0;
+  width: 129px;
+  height: 32px;
+  font-size: 14px;
+  color: white;
+  font-weight: 600;
+  padding-top: 10px;
 }
 
-#third {
+figcaption#third {
   background-color: #099CE8;
 }
 
-#fifth {
+figcaption#fifth {
   background-color: transparent;
+}
+
+
+@media (min-width: 1200px) {
+  .main{
+    max-width: 1106px;
+
+  &-Wrapper {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    margin: 0 auto;
+  }
+
+  &-Content {
+    margin-left: 23px;
+    margin-bottom: 26px;
+  }
+
+    &-Card {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      border-radius: 16px;
+      border: #828282 solid 0.3px;
+      margin-bottom: 59px;
+      max-width: 1106px;
+      width: 100%;
+      padding-bottom: 0px;
+
+      &Container {
+        display: flex;
+        margin: 0;
+        position: relative;
+        max-width: 470px;
+        width: 100%;
+      }
+
+      &Inner {
+        max-width: 470px;
+        width: auto;
+        max-height: 100%;
+        border-radius: 16px 0 0 16px;
+      }
+
+      &Description {
+        position: absolute;
+        top: 41px;
+        font-size: 12px;
+        width: 99px;
+        height: 27px;
+        background-color: #FED74B;
+        padding-top: 8px;
+      }
+    }
+
+    &-Action {
+      margin: 10px 12px 0 12px;
+      text-align: left;
+      color: #404040;
+      letter-spacing: 0.3px;
+      font-weight: 400;
+      font-size: 26px;
+      line-height: 34px;
+      position: relative;
+      top: -25px;
+
+      &Word {
+        display: none;
+      }
+      &Year {
+        display: none;
+      }
+      &2020 {
+        display: contents;
+      }
+    }
+  }
+
+  img#second {
+    height: 100%;
+  }
 }
